RESOLVED FIXED196686
[iOS] Do not allow starting selection drags when selection views are not visible
https://bugs.webkit.org/show_bug.cgi?id=196686
Summary [iOS] Do not allow starting selection drags when selection views are not visible
Wenson Hsieh
Reported 2019-04-07 18:24:28 PDT
Attachments
Patch (21.76 KB, patch)
2019-04-07 18:44 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-04-07 18:44:42 PDT
WebKit Commit Bot
Comment 2 2019-04-08 15:49:25 PDT
Comment on attachment 366916 [details] Patch Clearing flags on attachment: 366916 Committed r244056: <https://trac.webkit.org/changeset/244056>
WebKit Commit Bot
Comment 3 2019-04-08 15:49:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.