Source/WebKit/WebProcess/WebCoreSupport/WebDragClient.cpp
@@ -47,7 +47,7 @@ void WebDragClient::willPerformDragSourceAction(DragSourceAction, const IntPoint
 
 DragSourceAction WebDragClient::dragSourceActionMaskForPoint(const IntPoint&)
 {
-    return DragSourceActionAny;
+    return m_page->allowedDragSourceActions();
 }
 
 #if !PLATFORM(COCOA) && !PLATFORM(GTK)
